static/styles/zulip.css
/* ... */
@-ms-keyframes rotate {
    from { -ms-transform: rotate(0deg); }
    to { -ms-transform: rotate(359deg); }
}

@-moz-keyframes rotate {
    from { -o-transform: rotate(0deg); }
    to { -o-transform: rotate(359deg); }
}

@keyframes rotate {
    from { transform:rotate(0deg); }
    to { transform:rotate(359deg); }
}

.compose_table .message_header_colorblock, .compose_table .message_header {
    box-shadow: none;
    background: none;
}

.compose_table .message_header_colorblock {
    border-radius: 3px 0px 0px 3px;
    border-bottom: 0px;
}

.compose_table .message_header_colorblock.message_header_private_message {
    border-radius: 3px 0px 0px 3px;
    border-bottom: 0px;
}

.compose_table .message_header_colorblock.message_header_private_message {
    background: #444;
}

.compose_table .right_part {
    padding: 0px;
}

.compose_table .right_part .icon-vector-narrow {
    font-size: 0.6em;
    position: relative;
}

.compose_table .compose_checkbox_label {
    display: inline-block;
}

.compose_table .pm_recipient {
    position: relative;
    margin-right: 30px;
    height: 25px;
}

.compose_table #private-message .you_text {
    position: absolute;
    height: 25px;
    line-height: 25px;
    padding-top: 0px;
    padding-bottom: 0px;
    width: 4em;
    background: #444444;
    color: #ffffff;
}

.compose_table .pm_recipient #private_message_recipient {
    margin-left: 4em;
    border-left: none;
    border-radius: 0px 3px 3px 0px;
    padding-top: 0px;
    padding-bottom: 0px;
    height: 23px;
    line-height: 23px;
}

.compose_table #private-message .right_part {
    padding-right: 4em;
}

.compose_table #compose-lock-icon {
    position: relative;
    width: 0px;
}

.compose_table #compose-lock-icon i {
    position: absolute;
    left: 5px;
    top: 3px;
}

.messagebox-bottom {
    height: 3px;
    background-color: #fff;
    border-radius: 0px 0px 3px 0px;
    /* box-shadow: 0px 2px 2px -1px #ccc; */
    border: 1px solid #c1dbd5;
    border-top: none;
    border-left: none;
}

.messagebox-bottom-colorblock {
    border-radius: 0px 0px 0px 3px;
    /* box-shadow: 0px 2px 2px -1px #ccc; */
    border: 1px solid #c1dbd5;
    border-top: none;
    border-right: none;
}

.floating_recipient .message_header_private_message {
    border-bottom: 0px;
    border-left: 0px;
}

.message_header_private_message .message_label_clickable {
    background-color: #444444;
    display: inline-block;
    padding: 3px 4px 2px 4px;
    font-weight: normal;
    font-size: 14px;
    height: 17px;
    line-height: 17px;
}

.compose_table .message_header {
    background: none;
    background-color: #ececec;
    border: none;
    border-radius: 0px;
    box-shadow: none !important;
}

/* Base color backgrounds for messageboxes,
   private messages, mentions, and unread messages */

.compose_table .messagebox {
   box-shadow: none !important;
}

.messagebox {
    background-color: #ffffff;
    position: relative;
}

.private-message .messagebox,
.message_header_private_message .message-header-contents {
    background-color: #feffe0;
}

.message_header_private_message .message-header-contents {
    border-right: 1px solid #e2e2e2;
    border-top: 1px solid #e2e2e2;
}

.mention .messagebox-content {
    background-color: #ffe4e0;
}

.messagebox .message_top_line {
    position: relative;
}

.recipient_row .message_row:first-child .unread_marker {
    top: 0px;
}

.unread_marker {
    display: block;
    position: absolute;
    left: 2px;
    top: 0px;
    padding-bottom: 2px;
    opacity: 0;
    z-index: 1;
    height: 100%;
    -webkit-transition: all 0.3s ease-out;
    -moz-transition: all 0.3s ease-out;
    -o-transition: all 0.3s ease-out;
    transition: all 0.3s ease-out;
}

.unread-marker-fill {
    background: #2b8213;
    width: 3px;
    height: 100%;
    box-shadow: inset 0px -1px 0px 0px #ffffff;
}

.last_message .unread-marker-fill {
    box-shadow: none;
}

.unread .unread_marker {
    -webkit-transition: all 0.3s ease-out;
    -moz-transition: all 0.3s ease-out;
    -o-transition: all 0.3s ease-out;
    transition: all 0.3s ease-out;
    opacity: 1;
}

.unread_marker.slow_fade {
    -webkit-transition: all 2s ease-out;
    -moz-transition: all 2s ease-out;
    -o-transition: all 2s ease-out;
    transition: all 2s ease-out;
}

.unread_marker.fast_fade {
    -webkit-transition: all 0.3s ease-out;
    -moz-transition: all 0.3s ease-out;
    -o-transition: all 0.3s ease-out;
    transition: all 0.3s ease-out;
}

.selected_message .messagebox {
    z-index: 1;
}

.selected_message .messagebox-content {
    box-shadow: inset 0px 0px 0px 2px #4577bc,
                     -1px -1px 0px 0px #4577bc,
                      1px 1px 0px 0px #4577bc,
                     -1px 1px 0px 0px #4577bc,
                      1px -1px 0px 0px #4577bc;
}

.message_sender {
    height: 0px;
    vertical-align: top;
    position: relative;
}

.sender_name {
    color: #333;
    display: inline-block;
    font-weight: 700;
    vertical-align: top;
    line-height: 12px;
    font-size: 14px;
}

.sender-status {
    display: inline-block;
    padding-bottom: 22px;
    vertical-align: top;
    height: 35px;
    line-height: 35px;
    font-size: 14px;
    position: relative;
}

.sender-status .sender_name {
    font-weight: bold;
    position: static;
    vertical-align: top;
    line-height: 35px;
    margin-right: 3px;
    font-size: 14px;
}

.sender_name_hovered .sender_name {
    color: #0088CC;
}

.sender_name_hovered .inline_profile_picture {
    border-color: #0088CC;
}

.actions_hover:hover {
    color: #0088CC;
}

.message_failed,
.message_local {
    display: inline-block;
    cursor: pointer;
    font-size: 13px;
}

.message_failed {
    font-weight: bold;
    color: red;
    padding: 0px 1px 0px 1px;
}

.message_failed i {
    margin-left: 2px;
    margin-right: 2px;
}

a.message_label_clickable:hover {
    cursor: pointer;
    color: #08C;
}

.on_hover_topic_edit {
    opacity: .1;
}
/* ... */

